app/assets/stylesheets/layout.css
:where(#main) {
  --footer-height: calc((var(--block-space) * 2) + var(--btn-size));

  container-type: inline-size;
  font-size: var(--font-medium-responsive);
  inline-size: 60ch;
  margin-block: var(--block-space) var(--footer-height);
  margin-inline: auto;
  max-inline-size: 100%;
  padding-inline: clamp(var(--inline-space), 5cqi, calc(var(--inline-space) * 3));
  text-align: start;

  &:where(.book) {
    --cover-height: auto;
    --space: clamp(2ch, 10%, 6ch);

    column-gap: calc(var(--space) / 2);
    display: grid;
    grid-template-columns: minmax(25%, 20dvw) 1fr;
    inline-size: 100%;
    padding-inline: var(--space);

    @media (max-width: 100ch) {
      --cover-height: 75dvh;

      grid-template-columns: 1fr;
    }
  }

  &:where(.books) {
    inline-size: 100%;
  }

  @media print {
    font-size: 11pt;
    inline-size: unset;
    line-height: 1.3;
    margin: 0;
    orphans: 3;
    padding: 0;
    text-align: justify;
    text-justify: distribute;
    widows: 2;
  }
}

:where(#header) {
  border-block-end: var(--border-size, 1px) solid var(--color-subtle);
  inset: 0 0 auto 0;
  position: sticky;
  view-transition-name: header;

  > nav {
    view-transition-name: nav;
  }

  @supports (animation-timeline: scroll()) {
    animation: slide-up linear both;
    animation-timeline: scroll();
    animation-range: 0 150px;
  }
}

:where(#footer) {
  /* animation: slide-down linear both; */
  /* animation-timeline: scroll(); */
	/* animation-range: 0 150px; */
  border-block-start: 1px solid var(--color-subtle);
  inset: auto 0 0 0;
  position: fixed;
  view-transition-name: footer;
}

:where(#header, #footer) {
  -webkit-backdrop-filter: blur(20px);
  backdrop-filter: blur(20px);
  background-color: oklch(var(--lch-white) / 0.5);
  z-index: 1;

  > * {
    align-items: center;
    display: flex;
    gap: 1ch;
    justify-content: center;
    padding: var(--block-space-half) var(--inline-space);
  }

  @media print {
    display: none;
  }
}

